# difference.rs

./: Cargo.toml  README.md
examples/: github-style.rs  line-by-line.rs  underline-words.rs
src/: display.rs  lcs.rs  lib.rs  merge.rs
tests/: quickcheck.rs
