[package]
name = "difference"
version = "2.0.0"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "A Rust text diffing and assertion library."
repository = "https://github.com/johannhof/difference.rs"
documentation = "https://johannhof.github.io/difference.rs/difference/index.html"
readme = "README.md"
categories = ["text-processing", "development-tools::testing"]
keywords = ["diff", "text", "compare", "changes", "assert"]
license = "MIT"
edition = "2018"

[dev-dependencies]
term = "0.6.1"
quickcheck = "1.0.1"
